tests/cmp/neg-dc-label-parsing-01.golden
Parse Error:
tests/cmp/neg-dc-label-parsing-01.trp:2:33: parse error
  2 | let val x = 42 raisedTo `<alice bob>`
    |                                 ^
  unexpected identifier 'bob'
  expected ';'

